--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta name="google-site-verification" content="58H8MY5jjzW92ZNLn3BZQhVXQWGRkllY2sUfVGuEQ9s" />
-      <title>Desing</title>
+      <title>Yerko Orozco | Consejal</title>
+      <meta name="description" content="Sitio oficial de Yerko Orozco, propuestas, noticias y contacto." />
     </head>
 
     <body>
